--- a/_sass/jk_amazon.scss
+++ b/_sass/jk_amazon.scss
@@ -1,16 +1,20 @@
+.jk-amazon-image {
+  min-height: 1px;
+  width: 130px;
+}
+
+.jk-amazon-info-title {
+  padding-bottom: 10px;
+}
+
 .jk-amazon-item {
   margin-bottom: 20px;
   .jk-amazon-image {
     float: left;
-    min-height: 1px;
-    width: 130px;
   }
   .jk-amazon-info {
     margin-left: 130px;
     min-height: 1px;
-    .jk-amazon-info-title {
-      padding-bottom: 10px;
-    }
   }
   &:before, &:after {
     display: table;
